--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,9 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.ipynb linguist-language=Python
+
+
+# Mark notebooks as "not code" (excluded from stats)
+*.ipynb linguist-documentation
+   
+# Mark as generated (also excluded)
+*.ipynb linguist-generated
